--- a/MidiConvert/cbo/templates/index.html
+++ b/MidiConvert/cbo/templates/index.html
@@ -64,6 +64,7 @@
       <!-- navigation -->
       <ul id="nav" class="sf-menu">
         <li class="current_page_item"><a href="/home">HOME</a></li>
+        <li><a href="/canvas">CANVAS</a></li>
         <li><a href="/about">FEATURES</a></li>
         <li ><a href="/login">LOGIN</a></li>
         <li><a href="/contact">CONTACT</a></li>
