Changed the tab headings in Contact and About HTML file

--- a/MidiConvert/cbo/templates/contact.html
+++ b/MidiConvert/cbo/templates/contact.html
@@ -62,10 +62,11 @@
     <div class="wrapper-header">
       <!-- navigation -->
       <ul id="nav" class="sf-menu">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">FEATURES</a></li>
-        <li><a href="Login page/Login.html">LOGIN</a></li>
-        <li class="current_page_item"><a href="contact.html">CONTACT</a></li>
+        <li><a href="/home">HOME</a></li>
+        <li><a href="/canvas">CANVAS</a></li>
+        <li><a href="/about">FEATURES</a></li>
+        <li ><a href="/login">LOGIN</a></li>
+        <li class="current_page_item"><a href="/contact">CONTACT</a></li>
       </ul>
       <!-- ENDS navigation -->
     </div>
