--- a/MidiConvert/cbo/templates/about.html
+++ b/MidiConvert/cbo/templates/about.html
@@ -4,9 +4,9 @@
 <title>MidiAngelo - Features</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- CSS -->
-<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="css/center.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="css/blue.css" type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "css/style.css" %} type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "css/blue.css" %} type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "css/center.css" %} type="text/css" media="screen" />
 <!--[if IE 6]>
 <link rel="stylesheet" type="text/css" media="screen" href="css/ie-hacks.css" />
 <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
