cleaned up wording on website and fixed css links

--- a/MidiConvert/cbo/templates/index.html
+++ b/MidiConvert/cbo/templates/index.html
@@ -106,50 +106,39 @@
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">Want to take your NFT to another level?</p>
-            <a href="about.html" ><img src={% static "img/dummies/NFT cover.jpeg" %} alt="" class="thumb" /> </a> </div>
-          <div class="block-text"> Login and upload (or create) your NFT and sell it with its own tune!
-            <p><a href="Login page/Login.html" class="link-button"><span>LOGIN</span></a></p>
+            <a href="/about" ><img src={% static "img/dummies/NFT cover.jpeg" %} alt="" class="thumb" /> </a> </div>
+          <div class="block-text"> A unique way to create NFT's, when have pictures and music been combined together?
+            <p><a href="/login" class="link-button"><span>LOGIN</span></a></p>
           </div>
         </li>
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">CREATE YOUR ART AND MUSIC.</p>
-            <a href="about.html" ><img src={% static "img/dummies/download (2).jpeg" %} alt="" class="thumb" /> </a> </div>
+            <a href="/about" ><img src={% static "img/dummies/download (2).jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text">You can draw whatever you feel like and hear your art come to life!
-            <p><a href="about.html" class="link-button"><span>FEATURES</span></a></p>
+            <p><a href="/about" class="link-button"><span>FEATURES</span></a></p>
           </div>
         </li>
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">ADD DIFFERENT INSTRUMENTS TO YOUR MP3 FILE</p>
-            <a href="about.html" ><img src={% static "img/dummies/download (1).jpeg" %} alt="" class="thumb" /> </a> </div>
+            <a href="/about" ><img src={% static "img/dummies/download (1).jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text">Choose from the different instruments included to create the music you want!
-            <p><a href="about.html" class="link-button"><span>FEATURES</span></a></p>
+            <p><a href="/about" class="link-button"><span>FEATURES</span></a></p>
           </div>
         </li>
         <li class="block">
           <div class="img-holder">
             <p class="block-title ">.midi TO MP3</p>
-            <a href="about.html" ><img src={% static "img/dummies/download.jpeg" %} alt="" class="thumb" /> </a> </div>
+            <a href="/about" ><img src={% static "img/dummies/download.jpeg" %} alt="" class="thumb" /> </a> </div>
           <div class="block-text">Upload your .midi file and you can convert it to mp3. Easy and fast!
-            <p><a href="about.html" class="link-button"><span>FEATURES</span></a></p>
+            <p><a href="/about" class="link-button"><span>FEATURES</span></a></p>
           </div>
         </li>
       </ul>
       <!-- ENDS blocks -->
     </div>
     <!-- ENDS main-wrapper -->
-    <!-- twitter -->
-    <div class="twitter-reader">
-      <div id="twitter-holder">
-        <ul>
-          <li>
-            <div class="twitter-entry">&quot;Omg MidiAngelo is the greatest webiste to convert a .midi file to mp3! yall gotta check it out fr. Linked the website in this tweet! <a href="#">midiangelo.com</a>&quot; <span class="twitter-time">about 4 hours ago</span></div>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!-- ENDS twitter -->
   </div>
   <!-- ENDS MAIN -->
   <!-- FOOTER -->
