--- a/MidiConvert/cbo/templates/about.html
+++ b/MidiConvert/cbo/templates/about.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+{% load static %}
 <title>MidiAngelo - Features</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- CSS -->
-<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="css/center.css" type="text/css" media="screen" />
-<link rel="stylesheet" href="css/blue.css" type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "css/style.css" %} type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "css/center.css" %} type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "css/blue.css" %} type="text/css" media="screen" />
 <!--[if IE 6]>
 <link rel="stylesheet" type="text/css" media="screen" href="css/ie-hacks.css" />
 <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
@@ -16,38 +17,38 @@
 <!--[if IE 8]><link rel="stylesheet" type="text/css" media="screen" href="css/ie8-hacks.css" /><![endif]-->
 <!-- ENDS CSS -->
 <!-- prettyPhoto -->
-<link rel="stylesheet" href="js/prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" />
+<link rel="stylesheet" href={% static "js/prettyPhoto/css/prettyPhoto.css" %} type="text/css" media="screen" />
 <!-- ENDS prettyPhoto -->
 <!-- JS -->
-<script type="text/javascript" src="js/jquery_1.4.2.js"></script>
-<script type="text/javascript" src="js/jqueryui.js"></script>
-<script type="text/javascript" src="js/easing.js"></script>
-<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-<script type="text/javascript" src="js/tooltip/jquery.tools.min.js"></script>
-<script type="text/javascript" src="js/jquery.tabs/jquery.tabs.pack.js"></script>
-<script type="text/javascript" src="js/filterable.pack.js"></script>
-<script type="text/javascript" src="js/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src={% static "js/jquery_1.4.2.js" %}></script>
+<script type="text/javascript" src={% static "js/jqueryui.js" %}></script>
+<script type="text/javascript" src={% static "js/easing.js" %}></script>
+<script type="text/javascript" src={% static "js/jquery.cycle.all.js" %}></script>
+<script type="text/javascript" src={% static "js/tooltip/jquery.tools.min.js" %}></script>
+<script type="text/javascript" src={% static "js/jquery.tabs/jquery.tabs.pack.js" %}></script>
+<script type="text/javascript" src={% static "js/filterable.pack.js" %}></script>
+<script type="text/javascript" src={% static "js/prettyPhoto/js/jquery.prettyPhoto.js" %}></script>
+<script type="text/javascript" src={% static "js/custom.js" %}></script>
 <!-- ENDS JS -->
 <!-- superfish -->
-<link rel="stylesheet" type="text/css" media="screen" href="css/superfish-custom.css" />
-<script type="text/javascript" src="js/superfish-1.4.8/js/hoverIntent.js"></script>
-<script type="text/javascript" src="js/superfish-1.4.8/js/superfish.js"></script>
+<link rel="stylesheet" type="text/css" media="screen" href={% static "css/superfish-custom.css" %} />
+<script type="text/javascript" src={% static "js/superfish-1.4.8/js/hoverIntent.js" %}></script>
+<script type="text/javascript" src={% static "js/superfish-1.4.8/js/superfish.js" %}></script>
 <!-- ENDS superfish -->
 <!-- tabs -->
-<link rel="stylesheet" href="css/jquery.tabs.css" type="text/css" media="print, projection, screen" />
+<link rel="stylesheet" href={% static "css/jquery.tabs.css" %} type="text/css" media="print, projection, screen" />
 <!-- Additional IE/Win specific style sheet (Conditional Comments) -->
 <!--[if lte IE 7]><link rel="stylesheet" href="css/jquery.tabs-ie.css" type="text/css" media="projection, screen"><![endif]-->
 <!-- ENDS tabs -->
 <!-- Cufon -->
-<script src="js/cufon-yui.js" type="text/javascript"></script>
-<script src="js/bebas-neue_400.font.js" type="text/javascript"></script>
+<script src={% static "js/cufon-yui.js" %} type="text/javascript"></script>
+<script src={% static "js/bebas-neue_400.font.js" %} type="text/javascript"></script>
 <!-- /Cufon -->
 </head>
 <body>
 <div class="torn-top"></div>
 <!-- HEADER -->
-<div id="header"> <a href="index.html"><img src="img/logo.png" alt="" id="logo" /></a>
+<div id="header"> <a href="/home"><img src="img/logo.png" alt="" id="logo" /></a>
   <!-- search -->
   <div class="top-search">
     <form  method="get" id="searchform" action="#">
@@ -77,8 +78,7 @@
 <div id="main">
   <!-- page title -->
   <div class="page-title-holder">
-    <div class="page-title">Features of this website</div>
-    <div class="page-subtitle">Note: This is just the features implemented so far. We will have more in the future. Stay tuned!</div>
+    <div class="page-title">Our Journey so Far</div>
   </div>
   <!-- ENDS page title -->
   <!-- main-wrapper -->
@@ -95,7 +95,7 @@
       </div>
       <div class="one-half last">
         <h4>Choosing instruments that play over the .midi file </h4>
-        <p>We have a library of instruments for you to select from and this includes but not limited to string, woodwind, brass, drums, rtc.</p>
+        <p>With a library of instruments for you to select from, you can choose the sounds that create your music. It's like your very own band!</p>
       </div>
       <div class="clear "></div>
       <!-- ENDS 2 cols -->
@@ -104,54 +104,54 @@
         <h4>A big drawing canvas is your playground</h4>
         <p>Draw whatever you can imagine on the canvas provided. Feel the canvas is too small? No problem! Increase the canvas size as you see fit.</p>
       </div>
-      <div class="one-third">
-        <h4>Track and check your work over time</h4>
-        <p>Login and see what you have created so far and how you have improved over time </p>
-      </div>
-      <div class="one-third last">
-        <h4>Convert .midi files to .mp3 </h4>
-        <p>You don't feel like drawing but you have a .midi file that you want to convert to mp3? Come right in! Our website can do that in no time.</p>
-      </div>
-      <div class="clear "></div>
-      <!-- ENDS 3 cols -->
       <!-- 2/3 cols -->
       <div class="one-third">
-        <h4>Choose your bpm</h4>
-        <p>You have made your song but feel the track is either slow or fast? Don't worry. With our bpm selector, you can input the bpm you want and change the speed of the music.</p>
+        <h4>Choose your tempo</h4>
+        <p>You have made your song but feel the track is either slow or fast? Don't worry. Change the pace of your music with the playback speed modifier built into the audio player!</p>
+      </div>
+      <div class="clear "></div>
+      <div class="one-third last">
+        <h4>Create an Account and Stay ahead</h4>
+        <p>We have big features planned for our users with accounts, plus, signup is free and easy!</p>
+      </div>
+      <!-- ENDS 3 cols -->
+      <!-- ENDS 1/4-3/4 cols -->
+    </div>
+    <!-- ENDS page content -->
+  </div>
+  <!-- ENDS main-wrapper -->
+  <div class="page-title-holder">
+    <div class="page-title">Check out our Roadmap!</div>
+  </div>
+  <!-- ENDS page title -->
+  <!-- main-wrapper -->
+  <div class="wrapper">
+    <!-- page-content -->
+    <div class="page-content">
+      <div class="one-third">
+        <h4>User Galleries</h4>
+        <p>See the sights and sounds of what you've created and explore the imaginations of other users!</p>
       </div>
       <div class="two-third last">
         <h4>Organize contests</h4>
-        <p>(Feature not implemented)You can host competitions to see who comes up with the best art and music by setting up a leaderboard and letting people vote on the submissions you get on your contest.</p>
+        <p>Host competitions to see who comes up with the best art and music by setting up a leaderboard and letting people vote on the submissions.</p>
       </div>
       <div class="clear "></div>
       <!-- ENDS 2/3 cols -->
       <!-- 4 cols -->
       <div class="one-fourth">
         <h4>Know where you stand in your community </h4>
-        <p>(Feature not implemented)You can click on a user profile to see their gallery and their submissions in the contests they have participated in. </p>
+        <p>See the contests users participated and where you're placed among them.</p>
       </div>
       <div class="one-fourth">
         <h4>Comment your thoughts on others work</h4>
-        <p>(Feature not implemented)Want to be a critic? There is a comment box under a painting-mp3 combo, where you can leave your thoughts for the artist to see!</p>
+        <p>Want to have a voice? Give feedback on someone's creation by commenting your thoughts for the artist to see!</p>
       </div>
       <div class="one-fourth">
-        <h4>Login to save your work periodically </h4>
-        <p>(Feature not implemented)You can create an account and login to save your work periodically so that you dont lose any of your precious time or imagination you brought to life in your art.</p>
+        <h4>Works in Progress</h4>
+        <p>The Mona Lisa wasn't made in a day, so users should be able to save their work periodically letting you finish that masterpiece later.</p>
       </div>
       <div class="clear"></div>
-      <!-- ENDS 1/4-3/4 cols -->
-    </div>
-    <!-- ENDS page content -->
-  </div>
-  <!-- ENDS main-wrapper -->
-  <!-- twitter -->
-  <div class="twitter-reader">
-    <div id="twitter-holder">
-      <ul>
-        <li>
-          <div class="twitter-entry">&quot;Ayo this new website that I rolled up on got some dope features bruh. Yall gotta see this thing fr fr! Click on the line below to go there - <a href="#">midiangelo.com</a>&quot; <span class="twitter-time">about 11 hours ago</span></div>
-        </li>
-      </ul>
     </div>
   </div>
   <!-- ENDS twitter -->
@@ -179,7 +179,6 @@
         <h6>LINKS</h6>
         <ul>
           <li><a href="https://www.youtube.com/watch?v=v-ibXM3xBjg">HOW TO CREATE PIXEL ART TUTORIAL</a></li>
-          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">DO NOT CLICK HERE</a></li>
         </ul>
       </li>
     </ul>
