--- a/MidiConvert/cbo/templates/contact.html
+++ b/MidiConvert/cbo/templates/contact.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+  {% load static %}
   <title>MidiAngelo - Contact</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- CSS -->
-  <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="css/center.css" type="text/css" media="screen" />
-  <link rel="stylesheet" href="css/blue.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "css/style.css" %} type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "css/center.css" %} type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "css/blue.css" %} type="text/css" media="screen" />
   <!--[if IE 6]>
   <link rel="stylesheet" type="text/css" media="screen" href="css/ie-hacks.css" />
   <script type="text/javascript" src="js/DD_belatedPNG.js"></script>
@@ -16,38 +17,38 @@
   <!--[if IE 8]><link rel="stylesheet" type="text/css" media="screen" href="css/ie8-hacks.css" /><![endif]-->
   <!-- ENDS CSS -->
   <!-- prettyPhoto -->
-  <link rel="stylesheet" href="js/prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href={% static "js/prettyPhoto/css/prettyPhoto.css" %} type="text/css" media="screen" />
   <!-- ENDS prettyPhoto -->
   <!-- JS -->
-  <script type="text/javascript" src="js/jquery_1.4.2.js"></script>
-  <script type="text/javascript" src="js/jqueryui.js"></script>
-  <script type="text/javascript" src="js/easing.js"></script>
-  <script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-  <script type="text/javascript" src="js/tooltip/jquery.tools.min.js"></script>
-  <script type="text/javascript" src="js/jquery.tabs/jquery.tabs.pack.js"></script>
-  <script type="text/javascript" src="js/filterable.pack.js"></script>
-  <script type="text/javascript" src="js/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-  <script type="text/javascript" src="js/custom.js"></script>
+  <script type="text/javascript" src={% static "js/jquery_1.4.2.js" %}></script>
+  <script type="text/javascript" src={% static "js/jqueryui.js" %}></script>
+  <script type="text/javascript" src={% static "js/easing.js" %}></script>
+  <script type="text/javascript" src={% static "js/jquery.cycle.all.js" %}></script>
+  <script type="text/javascript" src={% static "js/tooltip/jquery.tools.min.js" %}></script>
+  <script type="text/javascript" src={% static "js/jquery.tabs/jquery.tabs.pack.js" %}></script>
+  <script type="text/javascript" src={% static "js/filterable.pack.js" %}></script>
+  <script type="text/javascript" src={% static "js/prettyPhoto/js/jquery.prettyPhoto.js" %}></script>
+  <script type="text/javascript" src={% static "js/custom.js" %}></script>
   <!-- ENDS JS -->
   <!-- superfish -->
-  <link rel="stylesheet" type="text/css" media="screen" href="css/superfish-custom.css" />
-  <script type="text/javascript" src="js/superfish-1.4.8/js/hoverIntent.js"></script>
-  <script type="text/javascript" src="js/superfish-1.4.8/js/superfish.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href={% static "css/superfish-custom.css" %} />
+  <script type="text/javascript" src={% static "js/superfish-1.4.8/js/hoverIntent.js" %}></script>
+  <script type="text/javascript" src={% static "js/superfish-1.4.8/js/superfish.js" %}></script>
   <!-- ENDS superfish -->
   <!-- tabs -->
-  <link rel="stylesheet" href="css/jquery.tabs.css" type="text/css" media="print, projection, screen" />
+  <link rel="stylesheet" href={% static "css/jquery.tabs.css" %} type="text/css" media="print, projection, screen" />
   <!-- Additional IE/Win specific style sheet (Conditional Comments) -->
   <!--[if lte IE 7]><link rel="stylesheet" href="css/jquery.tabs-ie.css" type="text/css" media="projection, screen"><![endif]-->
   <!-- ENDS tabs -->
   <!-- Cufon -->
-  <script src="js/cufon-yui.js" type="text/javascript"></script>
-  <script src="js/bebas-neue_400.font.js" type="text/javascript"></script>
+  <script src={% static "js/cufon-yui.js" %} type="text/javascript"></script>
+  <script src={% static "js/bebas-neue_400.font.js" %} type="text/javascript"></script>
   <!-- /Cufon -->
   </head>
   <body>
   <div class="torn-top"></div>
   <!-- HEADER -->
-  <div id="header"> <a href="index.html"><img src="img/logo.png" alt="" id="logo" /></a>
+  <div id="header"> <a href="/home"><img src={% static "img/logo.png" %} alt="" id="logo" /></a>
     <!-- search -->
     <div class="top-search">
       <form  method="get" id="searchform" action="#">
@@ -88,8 +89,6 @@
         <!-- 2 cols -->
         <div class="one-half">
           <h4>CONTACT FORM</h4>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugamet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vit, commodo vitae, ornare si, eros ipsum rutrum orci, sagittis tempus.</p>
-          <!-- form -->
           <form id="contactForm" action="#" method="post">
             <fieldset>
               <p>
@@ -112,18 +111,16 @@
                 <input type="button" value="SEND" name="submit" id="submit" />
               </p>
             </fieldset>
-            <p id="error" class="warning">Error Message</p>
           </form>
-          <p id="success" class="success">Thanks for your comments.</p>
           <!-- ENDS form -->
         </div>
         <div class="one-half last">
           <h4>LOCATION </h4>
-          <p>Pellentest condimentum, eros ipsum rutrum orci, sagittis tempus.</p>
-          <p><img src="img/dummies/download_1.jpeg" alt="" /></p>
+          <p><img src={% static "img/dummies/download_1.jpeg" %} alt="" /></p>
           <p>University of Saskatchewan<br/>
             Canada S7N 6N9<br/>
-            (306)123456, (306)789101<br/>
+            FAX: (306)229-2659 <br/> 
+            OFFICE: (306)480-2830<br/>
             <a href="#">midiangelo@protonmail.com</a></p>
         </div>
         <div class="clear "></div>
@@ -132,17 +129,6 @@
       <!-- ENDS page content -->
     </div>
     <!-- ENDS main-wrapper -->
-    <!-- twitter -->
-    <div class="twitter-reader">
-      <div id="twitter-holder">
-        <ul>
-          <li>
-            <div class="twitter-entry">&quot;Some people are screenshotting my NFTs and making music out of them! Help me take down their website. Attached link below. <a href="#">midiangelo.com</a>&quot; <span class="twitter-time">about 1 hour ago</span></div>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <!-- ENDS twitter -->
   </div>
   <!-- ENDS MAIN -->
   <!-- FOOTER -->
@@ -167,7 +153,6 @@
           <h6>LINKS</h6>
           <ul>
             <li><a href="https://www.youtube.com/watch?v=v-ibXM3xBjg">HOW TO CREATE PIXEL ART TUTORIAL</a></li>
-            <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">DO NOT CLICK HERE</a></li>
           </ul>
           </ul>
         </li>
